QA-10914 Fixed visibility icon.

--- a/war/src/main/webapp/engines/jahia-anthracite/_pickers.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_pickers.scss
@@ -123,7 +123,7 @@ body[indigo-dragging-panel="true"] {
 	}
 
 	#JahiaGxtManagerToolbar .action-bar-tool-item.repositoryexplorer-menu-view {
-		background-image: url(./images/icons/icon_preview_dark.png);
+		background-image: url(./images/icons/icon_preview_dark.png) !important;
 	}
 
 }
